[package]
name = "rust_epl"
version = "0.1.0"
authors = ["Pablo Ortiz <pablo.ortiz@duke.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "2.0"
device_query = "0.1.0"
clap = { version = "2.33.3", features = ["yaml"] }